--- a/css/main.css
+++ b/css/main.css
@@ -16,17 +16,18 @@
     box-sizing: border-box;
     font-size: 24px;
     margin-bottom: 20px;
+    transition: all 0.5s;
 }
 #a:focus {
-    border: 2px solid red;
-    outline: 2px solid red;
+    border: 2px solid #ff4641;
+    outline: 2px solid #ff4641;
 }
 #a.ok:focus {
-    border: 2px solid green;
-    outline: 2px solid green;
+    border: 2px solid #69ca2b;
+    outline: 2px solid #69ca2b;
 }
 .btn {
-    width: 50%;
+    width: 390px;
     height: 35px;
     background: black;
     border-radius: 4px;
@@ -37,7 +38,24 @@
     float: left;
     margin-right: 20px;
     margin-bottom: 10px;
+    letter-spacing: 10px;
+    transition: all 0.5s;
 }
 .btn:last-child {
     margin-right: 0;
+}
+.btn:hover {
+    background: #69ca2b;
+}
+
+@media screen and (max-width: 800px) {
+    #q {
+        font-size: 20px;
+    }
+    #a {
+        font-size: 20px;
+    }
+    .btn {
+        width: 100%;
+    }
 }
