--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+body {
+    background: #262626;
+    color: white;
+}
 .container {
     max-width: 800px;
     margin: 0 auto;
@@ -6,6 +14,7 @@
 #q {
     font-size: 30px;
     font-weight: bold;
+    margin-top: 60px;
     margin-bottom: 20px;
     text-align: center;
 }
@@ -17,14 +26,17 @@
     font-size: 24px;
     margin-bottom: 20px;
     transition: all 0.5s;
+    background: #262626;
+    border: 1px solid #363636;
+    outline: none;
+    color: white;
+    border-radius: 6px;
 }
 #a:focus {
-    border: 2px solid #ff5b47;
-    outline: 2px solid #ff5b47;
+    border-color: #ff5b47;
 }
 #a.ok:focus {
-    border: 2px solid #69ca2b;
-    outline: 2px solid #69ca2b;
+    border-color: #69ca2b;
 }
 .btn_group {
     margin-bottom: 10px;
@@ -32,7 +44,7 @@
 .btn {
     width: 390px;
     height: 35px;
-    background: black;
+    background: #1e1e1e;
     border-radius: 4px;
     color: white;
     text-align: center;
@@ -48,7 +60,8 @@
     margin-right: 0;
 }
 .btn:hover {
-    background: #69ca2b;
+    background: white;
+    color: #1e1e1e;
 }
 
 #answer_list {
@@ -63,6 +76,58 @@
     color: #69ca2b;
 }
 
+#lnb {
+    width: 399px;
+    height: 100%;
+    background: #3c3f41;
+    position: fixed;
+    top: 0;
+    left: -400px;
+    border-right: 1px solid #676767;
+}
+#lnb .menu {
+    margin-top: 100px;
+    padding: 20px;
+}
+#lnb .menu li {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    border-bottom: 1px solid #676767;
+    cursor: pointer;
+}
+#lnb .close_btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 25px 10px;
+    cursor: pointer;
+}
+#lnb .close_btn .line {
+    width: 30px;
+    height: 1px;
+    background: white;
+}
+#lnb .close_btn .line1 {
+    transform: rotate(45deg);
+}
+#lnb .close_btn .line2 {
+    transform: rotate(-45deg);
+}
+
+#lnb_btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background: #1e1e1e;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    border: 1px solid #363636;
+}
+
+
 @media screen and (max-width: 800px) {
     #q {
         font-size: 20px;
@@ -72,5 +137,8 @@
     }
     .btn {
         width: 100%;
+    }
+    #lnb {
+        width: 95%;
     }
 }
